; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_stash.c_cmd_push.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_stash.c_cmd_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.opts = type { i64 }

@.str = private unnamed_addr constant [36 x i8] c"push does not accept any parameters\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"Unable to get signature\00", align 1
@GIT_STASH_DEFAULT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [21 x i8] c"Unable to save stash\00", align 1
@.str.3 = private unnamed_addr constant [30 x i8] c"Unable to lookup stash commit\00", align 1
@.str.4 = private unnamed_addr constant [28 x i8] c"Saved working directory %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.opts*)* @cmd_push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmd_push(i32* %0, %struct.opts* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.opts*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.opts* %1, %struct.opts** %4, align 8
  %8 = load %struct.opts*, %struct.opts** %4, align 8
  %9 = getelementptr inbounds %struct.opts, %struct.opts* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = call i32 @usage(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  br label %14

14:                                               ; preds = %12, %2
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @git_signature_default(i32** %5, i32* %15)
  %17 = call i32 @check_lg2(i32 %16, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %18 = load i32*, i32** %3, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @GIT_STASH_DEFAULT, align 4
  %21 = call i32 @git_stash_save(i32* %7, i32* %18, i32* %19, i32* null, i32 %20)
  %22 = call i32 @check_lg2(i32 %21, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i32* null)
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @git_commit_lookup(i32** %6, i32* %23, i32* %7)
  %25 = call i32 @check_lg2(i32 %24, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.3, i64 0, i64 0), i32* null)
  %26 = load i32*, i32** %6, align 8
  %27 = call i8* @git_commit_summary(i32* %26)
  %28 = call i32 @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.4, i64 0, i64 0), i8* %27)
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @git_signature_free(i32* %29)
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @git_commit_free(i32* %31)
  ret i32 0
}

declare dso_local i32 @usage(i8*) #1

declare dso_local i32 @check_lg2(i32, i8*, i32*) #1

declare dso_local i32 @git_signature_default(i32**, i32*) #1

declare dso_local i32 @git_stash_save(i32*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @git_commit_lookup(i32**, i32*, i32*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i8* @git_commit_summary(i32*) #1

declare dso_local i32 @git_signature_free(i32*) #1

declare dso_local i32 @git_commit_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
